# service-huc-editor

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.backup  Dockerfile_pld  README-local.md  README.md  app.py  config.py  docker-compose.yml  editor_backup.sh  functions.py  pyproject.toml  requirements.txt  test.xsl
.github/workflows/: docker.yml
conf/: .secrets.toml  log-config.yaml  settings.toml
data/apps/adoptie/: config.toml  config.xml
data/apps/data-envelopes/: config.toml  config.xml
data/apps/helloWorld/: config.toml  config.xml
data/apps/nde/: config.toml  config.xml
data/apps/test/: config.toml  config.xml
data/apps/vocabs/: config.toml  config.xml
data/apps/yugo/: config.toml  config.xml
data/apps/yugowithpath/: config.toml  (+1 more)
resources/proxies/: nominatim-local.toml  skosmos-clavas.toml  skosmos-local.toml  skosmos-odissei.toml  skosmos-sd.toml
resources/static/: status.html  storage.html
resources/templates/: HelloWorldTweak.xml  htp.test  tweak-1.xml
resources/xslt/: cmd-record-1_1-to-1_2.xsl  configTemplate.xsl  editor.xsl  fix-lookups.xsl  history2html.xsl  identity.xsl  js2xml.xsl  json2rec.xsl  lastTweak.xsl  listents.xsl  listrecs.xsl  mergeTweak.xsl  postTweak.xsl  prof2json.xsl  rec2json-2.xsl  rec2json.xsl  service-huc-editor.xpr  toHTML.xsl  toRecord.xsl  toTweak.xsl  updrec.xsl
scripts/: move-inprogress.sh
src/: admin.py  commons.py  database.py  main.py  profiles.py  protected.py  public.py  records.py
src/auth/: authentication.py  models.py  routes.py
src/config/: dependencies.py
tests/: public_test.py
(+37 files in other folders)
