[project]
name = "service-huc-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.11",
    "elasticsearch>=9.1.0",
    "emoji>=2.14.1",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "lxml>=6.0.1",
    "passlib>=1.7.4",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "saxonche>=12.8.0",
    "toml>=0.10.2",
    "uvicorn>=0.35.0",
    "weasyprint>=66.0",
]
